--- a/TinyTest1/Card.html
+++ b/TinyTest1/Card.html
@@ -14,9 +14,9 @@
 
 <meta name="twitter:title" content="TinyProjectTest">
 
-<meta name="twitter:image" content="https://divide-by-zero.github.io/TinyTest1/HelloWorld.html">
+<meta name="twitter:image" content="https://divide-by-zero.github.io/TinyTest1/ksz_mini.jpg">
 
-<meta name="twitter:player" content="https://divide-by-zero.github.io/TinyTest1/ksz_mini.jpg">
+<meta name="twitter:player" content="https://divide-by-zero.github.io/TinyTest1/HelloWorld.html">
 
 <meta name="twitter:player:height" content="350">
 
